Add JPA persistence, MySQL, Flyway migrations, and update README